public interface Media {


    String getTitle(); // The title of the film/series

    String getYear(); // the year when the movie/series first came out

    String getCategory(); // Which category/genre does the film/series belong in

    String getRating(); // The rating of the film and series

}
