import java.io.File;
import java.io.FileWriter;
import java.io.IOException;
import java.util.ArrayList;
import java.util.Scanner;

public class Movies extends RollingPictures {


    public Movies(String title, String year, String category, String rating) {
        super(title, year, category, rating);
    }

    @Override
    public String toString() {
        return super.toString();
    }
}
